# newsed

./: .gitignore  README.MD  pyproject.toml
.github/workflows/: python-publish.yml
src/newsed/: __init__.py  app.py  processors.py
src/newsed/tui/: __init__.py  main.tcss
